[package]
name = "smb2-rs"
version = "0.1.0"
edition = "2021"
description = "A lightweight SMB2 file server for macOS"
license = "MIT"

[[bin]]
name = "smb2-rs"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9.8"
rand = "0.9.2"
hmac = "0.12"
sha2 = "0.10"
md-5 = "0.10"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
